--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -12,10 +12,10 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio</a>
+          <a [routerLink]="['']" class="nav-link" href="#">Inicio</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Crear pais</a>
+        <li class="nav-item" *ngIf="identity">
+          <a [routerLink]="['crear-pais']" class="nav-link" href="#">Crear pais</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -32,7 +32,7 @@
             <a href="#" class="nav-link">{{identity.name + ' ' + identity.surname}}</a>
           </li>
           <li class="nav-item">
-            <a [routerLink]="['registro']"  class="nav-link">
+            <a [routerLink]="['logout', 1]"  class="nav-link">
               <span aria-hidden="true">&times;</span>
               Salir</a>
           </li>
